<resources>
    <string name="app_name">TFT Strategy</string>
    <string name="simulator">시뮬레이터</string>
    <string name="home">홈</string>
    <string name="championSynergy">챔피언/시너지</string>
    <string name="items">아이템</string>
    <string name="arrangement">배치 팁</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">setting</string>
    <string name="champion">챔피언</string>
    <string name="synergy">시너지</string>
    <string name="cost">코스트</string>
</resources>
