<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id = "@+id/action_home"
        android:title="@string/home"
        android:icon = "@drawable/ic_image1"
        />

    <item
        android:id = "@+id/action_champion_synergy"
        android:title="@string/championSynergy"
        android:icon = "@drawable/ic_image2"
        />

    <item
        android:id = "@+id/action_items"
        android:title="@string/items"
        android:icon = "@drawable/ic_image3"
        />

    <item
        android:id = "@+id/action_arrangement"
        android:title="@string/arrangement"
        android:icon = "@drawable/ic_image4"
        />

    <item
        android:id = "@+id/action_simulator"
        android:title="@string/simulator"
        android:icon = "@drawable/ic_image5"
        />
    </group>
</menu>